# Messenger

./: .gitmodules  CMakeLists.txt  README.md  messenger.ddl  messenger.sql
include/: connection.h  helpers.h  message.h  models.h  user.h
include/messenger/: MessageQueue.h  connection.h  groups.h  handlers.h  helpers.h  message.h  models.h  user.h
include/socket_parser/: message_parser.h
src/: CMakeLists.txt  MessageQueue.cpp  connection.cpp  db_generator.cpp  groups.cpp  handlers.cpp  helpers.cpp  message.cpp  message_parser.cpp  socket_client.cpp  socket_server.cpp  user.cpp
