add_executable(db_generator db_generator.cpp)
target_link_libraries(db_generator PUBLIC sqlpp11 sqlpp11-connector-sqlite3)
if (UNIX)
    set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
    set(THREADS_PREFER_PTHREAD_FLAG TRUE)
    find_package(Threads REQUIRED)
endif (UNIX)
add_executable(socket_server socket_server.cpp)
add_executable(socket_client socket_client.cpp)
if (UNIX)
    target_link_libraries(socket_server PRIVATE Threads::Threads)
endif (UNIX)

target_link_libraries(socket_server PUBLIC sqlpp11 sqlpp11-connector-sqlite3)